# wasteland

./: .gitmodules  CMakeLists.txt
assets/: packing_instrs.json
assets/shaders/: blend.frag  blend.vert  lighting.frag  lighting.vert
src/: game.cpp
